<resources>
    <string name="txt_app_name">AppGasEta2025</string>
    <string name="txt_titulo">Aplicativo Gasolina x Etanol 2025</string>
    <string name="txt_telefone_contato">Telefone de contato</string>
    <string name="txt_curso_desejado">Nome do curso desejado</string>
    <string name="txt_hint_edit_etanol">R$ Etanol</string>
    <string name="txt_btn_limpar">LIMPAR</string>
    <string name="txt_btn_salvar">SALVAR</string>
    <string name="txt_btn_finalizar">FINALIZAR</string>
    <string name="txt_btn_calcular">CALCULAR</string>
    <string name="txt_hint_edit_gasolina">R$ Gasolina</string>
    <string name="txt_resultado">Resultado</string>
    <string name="txt_selecione_um_curso">Selecione um curso</string>
    <string name="txt_hint_edit_resultado">Resultado</string>
</resources>