<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.GasEtaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/txt_titulo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ImgView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:src="@mipmap/ic_launcher_round" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editGasolina"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:hint="@string/txt_hint_edit_gasolina"
                    android:inputType="numberDecimal"
                    />

                <EditText
                    android:id="@+id/editEtanol"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:hint="@string/txt_hint_edit_etanol"
                    android:inputType="numberDecimal"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_btn_calcular" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/txt_resultado"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_btn_limpar" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_btn_salvar" />

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_btn_finalizar" />


        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>